# midterm_project

./: CMakeLists.txt  NGramsCounter.cpp  NGramsCounter.h  main.cpp
Text/: prova.txt
